[tool.poetry]
name = "exchange-data"
version = "0.1.0"
description = ""
authors = ["Market Monster <marketmonster69@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pybit = "^2.4.1"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
